[tool.poetry]
name = "science-bricks-jupyter"
version = "0.1.0"
description = ""
authors = ["Manuel Castillo <manucalop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipympl = "^0.9.2"
jupyterlab = "^3.4.7"
jupyterlite = "^0.1.0-beta.12"
jupyterlab-filesystem-access = "^0.5.2"

[tool.poetry.dev-dependencies]
pandas = "^1.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
