[tool.poetry]
name = "science-bricks-jupyter"
version = "0.1.0"
description = ""
authors = ["Manuel Castillo-Lopez <manucalop@gmail.com>"]
readme = "README.md"
packages = [{include = "science_bricks_jupyter"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlite = "^0.1.0b14"
jupyterlab = "^3.5.0"
jupyterlab-filesystem-access = "^0.5.2"
jupyterlab-drawio = "^0.9.0"
jupyterlab-fasta = "^3.2.0"
jupyterlab-geojson = "^3.2.0"
jupyterlite-p5-kernel = "^0.1.0a12"
ipympl = "^0.9.2"
ipycanvas = "^0.13.1"
ipyevents = "^2.0.1"
ipyleaflet = "^0.17.2"
ipywidgets = "^8.0.2"
plotly = "^5.11.0"
bqplot = "^0.12.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
