[tool.poetry]
name = "check_links"
version = "0.1.1"
description = "The check_links package"
readme = "README.md"
license = "MIT"
authors = ["Your Name <your.name@spartacommodities.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.2"
pyaml-env = "^1.1.5"
pathlib = "^1.0.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Home = "https://github.com/SpartaCommodities/check_links"
